# search-insight-api

./: .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt
src/core/: chunker.py  config.py  embeddings.py  vectorstore.py
src/gateway/: main.py
tests/: test_chunker.py  test_config.py
